# i8080_emu

./: CMakeLists.txt  README.md
src/: cycledValue.hpp  processor.cpp  processor.hpp  register.cpp  register.hpp
tests/: test.cpp
